--- a/boxotop-test/presentation/ui/movie/list/MovieListViewController.storyboard
+++ b/boxotop-test/presentation/ui/movie/list/MovieListViewController.storyboard
@@ -12,15 +12,30 @@
         <!--Movie List View Controller-->
         <scene sceneID="xwC-bC-QIc">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wxh-z2-cdP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="MovieListViewController" id="fes-TV-fWx" customClass="MovieListViewController" customModule="boxotop_test" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0ES-oU-UB7">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bZ6-O7-8pg">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="jGs-SK-4FD"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="jGs-SK-4FD" firstAttribute="trailing" secondItem="bZ6-O7-8pg" secondAttribute="trailing" id="Bbd-so-65s"/>
+                            <constraint firstItem="jGs-SK-4FD" firstAttribute="bottom" secondItem="bZ6-O7-8pg" secondAttribute="bottom" id="Ce4-xi-BAs"/>
+                            <constraint firstItem="jGs-SK-4FD" firstAttribute="leading" secondItem="bZ6-O7-8pg" secondAttribute="leading" id="Xpm-xc-eyd"/>
+                            <constraint firstItem="jGs-SK-4FD" firstAttribute="top" secondItem="bZ6-O7-8pg" secondAttribute="top" id="uht-zz-bbv"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="bZ6-O7-8pg" id="PnD-G9-1s1"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="wxh-z2-cdP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-30" y="41"/>
         </scene>
