--- a/boxotop-test/presentation/ui/movie/list/cell/MovieListTableViewCell.xib
+++ b/boxotop-test/presentation/ui/movie/list/cell/MovieListTableViewCell.xib
@@ -21,21 +21,21 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wfh-6b-acH">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7bv-mu-YvP">
-                                <rect key="frame" x="8" y="8" width="89" height="104"/>
-                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7bv-mu-YvP">
+                                <rect key="frame" x="8" y="8" width="74.5" height="104"/>
+                                <color key="backgroundColor" systemColor="systemGray2Color"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="7bv-mu-YvP" secondAttribute="height" multiplier="6:7" id="56B-2h-NJE"/>
+                                    <constraint firstAttribute="width" secondItem="7bv-mu-YvP" secondAttribute="height" multiplier="75:105" id="56B-2h-NJE"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Harry potteur" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IBL-Yt-rbL">
-                                <rect key="frame" x="105" y="10" width="207" height="20"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Harry potteur" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IBL-Yt-rbL">
+                                <rect key="frame" x="90.5" y="10" width="221.5" height="19.5"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RVo-MK-sk2">
-                                <rect key="frame" x="105" y="38" width="73" height="30"/>
+                                <rect key="frame" x="90.5" y="37.5" width="73" height="30"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yrL-Tq-Wox">
                                         <rect key="frame" x="16" y="2" width="41" height="26"/>
@@ -55,7 +55,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OFj-rA-5af">
-                                <rect key="frame" x="186" y="38" width="64.5" height="30"/>
+                                <rect key="frame" x="171.5" y="37.5" width="64.5" height="30"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2019" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pgx-mt-5kd">
                                         <rect key="frame" x="16" y="2" width="32.5" height="26"/>
@@ -69,7 +69,7 @@
                                     <constraint firstAttribute="height" constant="30" id="Kpp-Am-Omn"/>
                                     <constraint firstItem="pgx-mt-5kd" firstAttribute="leading" secondItem="OFj-rA-5af" secondAttribute="leading" constant="16" id="bLe-bS-rnw"/>
                                     <constraint firstItem="pgx-mt-5kd" firstAttribute="top" secondItem="OFj-rA-5af" secondAttribute="top" constant="2" id="isr-qx-1hZ"/>
-                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="100" id="jnb-ei-qBS"/>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="150" id="jnb-ei-qBS"/>
                                     <constraint firstAttribute="bottom" secondItem="pgx-mt-5kd" secondAttribute="bottom" constant="2" id="t6D-F0-rVp"/>
                                     <constraint firstAttribute="trailing" secondItem="pgx-mt-5kd" secondAttribute="trailing" constant="16" id="vsp-Qz-G6N"/>
                                 </constraints>
@@ -115,11 +115,11 @@
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemGray5Color">
             <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
